--- a/configs/theta_config.yml
+++ b/configs/theta_config.yml
@@ -27,13 +27,13 @@ storage:
   nb_files_per_read: 2
   nb_files_per_write: 2
   io_read_node_ratio: 0.1
-  max_read_node_cnt: 10
+  max_read_node_cnt: 20
   io_write_node_ratio: 0.1
-  max_write_node_cnt: 10
+  max_write_node_cnt: 20
   io_buffer_size: 536870912B
-  read_bytes_preload_thres: 100000000
-  write_bytes_copy_thres:  2000000000
-  cleanup_threshold: 0.5
+  read_bytes_preload_thres: 1000000000 # Not doing copy *in* if job reads more than 1GB
+  write_bytes_copy_thres:   2000000000 # Not doing copy *out* if job writes more than 2GB
+  cleanup_threshold: 0.75
   disk_templates:
     - &raid_OSS
       id: raid_OSS
