Messy commit... Unit and functional tests passing ;  Fix in the controller (sleep on S4U_Simulation replaced by a dummy job with a single sleep action : for unknown reasons, that seems to fix a bug I was having, where simulations would segfault due to a dangling pointer on the execution service of some sub jobs...) ; Fixed datasets (where the sleepDelay value inside each run had to be recomputed after the Controller fix) ; updated the new svg with jo representation for the simulation of the 'IOJobsTest_LustreSim3jobs.yml' jobs ; Small update in the run_calibration_parallel.py script : it is working, but I'm not sure about the calibration results yet, the analysis script is not updated yet ; Several test datasets have been updated along with the new field 'runsCount' added to the JobDefinition header (this field is not used yet)

--- a/configs/theta_config.yml
+++ b/configs/theta_config.yml
@@ -81,6 +81,7 @@ allocator: lustre
 lustre:
   lq_threshold_rr: 43     # lustre default
   lq_prio_free: 232       # lustre default
+  max_nb_ost: 2000        # lustre limit
   stripe_size: 268435456  # Default size of each read / write before switching to another stripe on a different OST (from https://www.alcf.anl.gov/sites/default/files/2022-08/CompPerfWorkshopq_May2022_IOopt_mcpheeters.pdf)
   stripe_count: 4         # Default number of OSTs used for each IO operation
   max_chunks_per_ost: 12  # Maximum number of file parts / allocation chunks on each OSTs (not a Lustre parameter, but used to speed up simulation at the cost of precision)
