--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,10 +11,10 @@ variables:
   CALIBRATION_CONFIG_PATH: "./exp_configurations"
   CALIBRATION_CONFIGURATION_BASE: "$CALIBRATION_CONFIG_PATH/theta_config.yml"
   CALIBRATION_DATASET_PATH: "./exp_datasets"
-  CALIBRATION_DATASET: "theta2022_week4"
+  CALIBRATION_DATASET: "theta2022_week4_medium"
   CALIBRATION_DATASET_EXT: ".yaml"
   CALIBRATION_BUILD_PATH: "../build"
-  CALIBRATION_RUNS: 30
+  CALIBRATION_RUNS: 15
 
 build_simgrid_v3.34:
   stage: build_deps
