Last calibration shows encouraging resuts. Going back to using the full week dataset, and increasing the range of read / written file count from [1-8] to [1-12]

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ variables:
   CALIBRATION_CONFIG_PATH: "./exp_configurations"
   CALIBRATION_CONFIGURATION_BASE: "$CALIBRATION_CONFIG_PATH/theta_config.yml"
   CALIBRATION_DATASET_PATH: "./exp_datasets"
-  CALIBRATION_DATASET: "theta2022_week4_medium"
+  CALIBRATION_DATASET: "theta2022_week4"
   CALIBRATION_DATASET_EXT: ".yaml"
   CALIBRATION_BUILD_PATH: "../build"
   CALIBRATION_RUNS: 15
